attempting to fix mobile canvas overflow

--- a/styles/scss/homePage/_carousel.module.scss
+++ b/styles/scss/homePage/_carousel.module.scss
@@ -20,7 +20,7 @@
     @media screen and (max-width:$s){
         height: 100vh;
         width: 100vw;
-        position: fixed;
+        // position: fixed;
         padding: 0;
         margin: 0;
         top: 0%;
